--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -52,3 +52,16 @@ body {
   margin: 0 auto;
   align-items: center;
 }
+
+.movie-content {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.movie-content {
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
